package Entities;

public interface UserFactory {
}
